deployment-muilti.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-muilti-dp
spec:
  minReadySeconds: 6
  replicas: 4
  selector:
    matchLabels:
      app: muilti # Must match the label in the template below
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: my-pod-muilti
      labels:        # Corrected indentation
        app: muilti  # Changed from 'gold' to 'muilti' to match the selector
    spec:
      containers:
        - name: my-container-muilti # Renamed for consistency
          image: "271071982991.dkr.ecr.ap-south-1.amazonaws.com/k8s/ingress:muilti"
          imagePullPolicy: Always
          ports: 
            - containerPort: 80
