svc-maison.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc-maison
spec:
  selector:
    app: maison
  type: ClusterIP
  ports:
    - port: 80
